feat(backend): carry market demand and coverage through to the dashboard